manifests-failed/drogue-cloud-twin-0.7.11.tgz-manifest.yaml
---
# Source: drogue-cloud-twin/templates/infrastructure/postgres/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  annotations:
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger

spec:
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release

  type: ClusterIP

  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
---
# Source: drogue-cloud-twin/templates/services/backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: doppelgaenger-backend
  annotations:
    
  labels:
    app.kubernetes.io/name: doppelgaenger-backend
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger

spec:

  selector:
    app.kubernetes.io/name: doppelgaenger-backend
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release

  type: ClusterIP

  ports:
    - name: service
      port: 443
      protocol: TCP
      targetPort: service
---
# Source: drogue-cloud-twin/templates/services/debugger/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: doppelgaenger-debugger
  labels:
    app.kubernetes.io/name: doppelgaenger-debugger
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger

spec:

  selector:
    app.kubernetes.io/name: doppelgaenger-debugger
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release

  type: ClusterIP

  ports:
    - name: service
      port: 8080
      protocol: TCP
      targetPort: service
---
# Source: drogue-cloud-twin/templates/services/swaggerui/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: doppelgaenger-swaggerui
  annotations:
    
  labels:
    app.kubernetes.io/name: doppelgaenger-swaggerui
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger

spec:

  selector:
    app.kubernetes.io/name: doppelgaenger-swaggerui
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release

  type: ClusterIP

  ports:
    - name: service
      port: 443
      protocol: TCP
      targetPort: service
---
# Source: drogue-cloud-twin/templates/infrastructure/postgres/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/component: digital-twin
      app.kubernetes.io/instance: my-release
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/component: digital-twin
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: drogue-doppelgaenger
    spec:
      containers:
        - name: postgres
          image: docker.io/bitnami/postgresql:14
          imagePullPolicy: IfNotPresent
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            limits:
              memory: 512Mi

          volumeMounts:
            - mountPath: /bitnami/postgresql
              name: storage

      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
# Source: drogue-cloud-twin/templates/services/backend/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doppelgaenger-backend
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"postgres"}]'
    
  labels:
    app.kubernetes.io/name: doppelgaenger-backend
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
    drogue.io/metrics: "true"

spec:

  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: doppelgaenger-backend
      app.kubernetes.io/component: digital-twin
      app.kubernetes.io/instance: my-release

  template:
    metadata:
      labels:
        app.kubernetes.io/name: doppelgaenger-backend
        app.kubernetes.io/component: digital-twin
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: drogue-doppelgaenger
        drogue.io/metrics: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"
        checksum/clients: 2d3beaf9d6e7b36ef8835c521af7e693aecfa43e9880c3908cd4506f0e5c4997

    spec:
      containers:
        - name: service
          image: "ghcr.io/drogue-iot/drogue-doppelgaenger-backend:0.11.0"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 9090
              path: /readiness
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 9090
              path: /liveness

          ports:
            
            - containerPort: 8443
              name: service
              protocol: TCP
            - containerPort: 9090
              name: health
              protocol: TCP
          

          volumeMounts:
            

      volumes:
---
# Source: drogue-cloud-twin/templates/services/debugger/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doppelgaenger-debugger
  labels:
    app.kubernetes.io/name: doppelgaenger-debugger
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger

spec:

  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: doppelgaenger-debugger
      app.kubernetes.io/component: digital-twin
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: doppelgaenger-debugger
        app.kubernetes.io/component: digital-twin
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: drogue-doppelgaenger

    spec:
      containers:
        - name: service
          image: "ghcr.io/drogue-iot/drogue-doppelgaenger-debugger:0.11.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: service
              protocol: TCP
          

          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 8080
              path: /

          volumeMounts:
            - mountPath: /run
              name: run
            - mountPath: /endpoints
              name: endpoints

      volumes:
        - name: run
          emptyDir: {}
        - name: endpoints
          emptyDir: {}
---
# Source: drogue-cloud-twin/templates/services/processor/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doppelgaenger-processor
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"postgres"}]'
    
  labels:
    app.kubernetes.io/name: doppelgaenger-processor
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
    drogue.io/metrics: "true"

spec:

  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: doppelgaenger-processor
      app.kubernetes.io/component: digital-twin
      app.kubernetes.io/instance: my-release

  template:
    metadata:
      labels:
        app.kubernetes.io/name: doppelgaenger-processor
        app.kubernetes.io/component: digital-twin
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: drogue-doppelgaenger
        drogue.io/metrics: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"

    spec:
      containers:
        - name: service
          image: "ghcr.io/drogue-iot/drogue-doppelgaenger-processor:0.11.0"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 9090
              path: /readiness
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 9090
              path: /liveness

          ports:
            - containerPort: 9090
              name: health
              protocol: TCP
---
# Source: drogue-cloud-twin/templates/services/swaggerui/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doppelgaenger-swaggerui
  annotations:
    io.drogue/tls-entrypoint-hash: b02630ebc7e4260b58e4503794f7fdbd377638b59e33c15064eb23b9afd33d93
  labels:
    app.kubernetes.io/name: doppelgaenger-swaggerui
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
    drogue.io/metrics: "true"

spec:

  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: doppelgaenger-swaggerui
      app.kubernetes.io/component: digital-twin
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: doppelgaenger-swaggerui
        app.kubernetes.io/component: digital-twin
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: drogue-doppelgaenger
        drogue.io/metrics: "true"

    spec:
      containers:
        - name: endpoint
          image: docker.io/swaggerapi/swagger-ui:v4.15.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
              name: service
              protocol: TCP
          

          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 8443
              path: /
              scheme: HTTPS

          volumeMounts:
            
            - name: tls-entrypoint
              mountPath: /docker-entrypoint.d/50-tls.sh
              subPath: 50-tls.sh
              readOnly: true

      volumes:
        
        - name: tls-entrypoint
          configMap:
            name: doppelgaenger-swaggerui-entrypoint-tls
            defaultMode: 0555
---
# Source: drogue-cloud-twin/templates/services/waker/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: doppelgaenger-waker
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"postgres"}]'
    
  labels:
    app.kubernetes.io/name: doppelgaenger-waker
    app.kubernetes.io/component: digital-twin
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
    drogue.io/metrics: "true"

spec:

  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: doppelgaenger-waker
      app.kubernetes.io/component: digital-twin
      app.kubernetes.io/instance: my-release

  template:
    metadata:
      labels:
        app.kubernetes.io/name: doppelgaenger-waker
        app.kubernetes.io/component: digital-twin
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/version: "0.11.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: drogue-doppelgaenger
        drogue.io/metrics: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "9090"

    spec:
      containers:
        - name: service
          image: "ghcr.io/drogue-iot/drogue-doppelgaenger-waker:0.11.0"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 9090
              path: /readiness
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 3
            httpGet:
              port: 9090
              path: /liveness

          ports:
            - containerPort: 9090
              name: health
              protocol: TCP
---
# Source: drogue-cloud-twin/templates/api/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  annotations:
    
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
spec:
  
  rules:
    - host: api.my-cluster.dns
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doppelgaenger-swaggerui
                port:
                  name: service
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: doppelgaenger-backend
                port:
                  name: service
---
# Source: drogue-cloud-twin/templates/infrastructure/sso/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: sso 
  annotations:
  
  
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
  
  labels:
    app.kubernetes.io/name: sso-ingress
    app.kubernetes.io/component: sso
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
spec:
  
  rules:
    - host: sso.my-cluster.dns
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sso-service
                port:
                  number: 8443
---
# Source: drogue-cloud-twin/templates/services/debugger/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: debugger
  annotations:
    
  labels:
    app.kubernetes.io/name: debugger
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.11.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: drogue-doppelgaenger
spec:
  
  rules:
    - host: debugger.my-cluster.dns
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doppelgaenger-debugger
                port:
                  name: service
